[gd_scene load_steps=8 format=4 uid="uid://bft4ip0s201gd"]

[ext_resource type="Script" uid="uid://obqey0lah7xx" path="res://scenes/enviroment/collectible/collectible.gd" id="1_pgilc"]
[ext_resource type="Texture2D" uid="uid://llagmvm23k4w" path="res://assets/models/godot_head/head_main_texture_noise.png" id="2_63bg3"]
[ext_resource type="AudioStream" uid="uid://cnr4npcnkrcdu" path="res://assets/audio/sfx/pick_up_1.mp3" id="3_63bg3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s3vdw"]
resource_name = "Material.002"
cull_mode = 2
albedo_texture = ExtResource("2_63bg3")
texture_filter = 2

[sub_resource type="ArrayMesh" id="ArrayMesh_7f20v"]
_surfaces = [{
"aabb": AABB(-1.167051, -0.75581896, -1.0021294, 2.334102, 2.227908, 1.9042587),
"format": 34896613377,
"index_count": 276,
"index_data": PackedByteArray("AAABAAIAAQADAAIABAABAAAAAgADAAUABQADAAYAAQAGAAMABQAGAAcAAgAFAAgACAAFAAcACQAHAAYACAAHAAkACQAGAAEAAgAIAAoACwAAAAIAAgAKAAsACwAMAAAADAAEAAAADQALAAoADAALAA4ADQAOAAsADwAKAAgACgAPAA0ADwAIABAACQAQAAgADQAPABEAEQAPABAAEgAOAA0ADQARABIAEgATAA4ADAAOABMADAATABQADAAUAAQAFQAUABMAFQAEABQAEgAWABMAFQATABYAEgAXABYAFwASABEAFQAWABgAFwAYABYAFQAZAAQAGAAZABUAFwAaABgAGAAbABkAGwAYABoABAAZABwAGQAbABwAGgAXAB0AFwARAB0AGwAaAB4AHQAeABoAHAAbAB8AEQAgAB0AHQAgAB4AEQAhACAAEQAQACEAIgAhABAAIgAgACEAIgAQAAkAIwAeACAAIgAjACAAGwAeACQAGwAkAB8AHgAlACQAHgAjACUAJAAmAB8AJAAlACYAIwAmACUAHAAfACYAIwAcACYAIwAiACcAHAAjACgAIwAnACgAHAAoACkAKAAnACoAKAAqACkAIgAqACcAKwAcACkAKwApACoAIgArACoABAAcACsABAArAAEAKwAsAAEAIgAtACsAKwAtACwAIgAuAC0ACQAuACIALwAsAC0AAQAsAC8ALwAtAC4AAQAvAAkACQAvAC4A"),
"name": "Material.002",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 48,
"vertex_data": PackedByteArray("tkpKpboNAACbO6zNklYAAB4PzpewVgAAAADXse9lAAD/f6qlAAAAAAAA17E5oAAA2BY90tplAADYFj3STqAAAB4PzpdOqQAAmzuszWypAAAAEAEzP6kAAAAQATO/VgAA50l2NHcOAAB2O7IKQKkAAHY7sgq+VgAAjEGiNYvvAABqQUSgUvIAAP9/qjHK/QAA/38AAECpAAD/fwAAvlYAAP9/jDO8AAAAF7Z2NHcOAACIxLIKvlYAAIjEsgpAqQAA/u8BM79WAABItUqlug0AAP7vATM/qQAA4fDOl7BWAABjxKzNklYAAOK/EDUW8AAA4fDOl06pAAD//9ex72UAAAvA4aCR8gAA/3+qpf//AAD/f2jibKkAAGPErM1sqQAA///XsTmgAAAm6T3STqAAACbpPdLaZQAAG5n//8KfAAD3vJz0wp8AAPe8nPQ8YAAAo5ns/zxgAAD/f2jiklYAAAdDnPQ8YAAAW2bs/zxgAADjZv//wp8AAAdDnPTCnwAA")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_1pg6c"]
resource_name = "head_Cube"
_surfaces = [{
"aabb": AABB(-1.167051, -0.75581896, -1.0021294, 2.334102, 2.227908, 1.9042587),
"attribute_data": PackedByteArray("OqGwxpaXveBfgmfLfbyLxpaXveA6obDGfbxd6F8aQIHSRg/JHhr8yGFGI4FPftWDOqGwxl+CZ8tMnVmAg1Y+30A7svO2OY/fVVFz804I0oAeGvzIHQhHyl8aQIEtR8xPsyyXcDQnzE+uISXpHhr8yLY5j98dCEfKtjmP3x4a/MjSRg/JJS0dCC1Hlyk0J5YpHQjMTzQnlik0J8xPHQiWKTQnzE8tR5cpLUfMTzQnlinSRg/JiE6A3LY5j9/IV6HMZsv/RwbeDWpmy0JuBt4PTyu7Qm6apvVOK7vjR5qmB2qKY77IYUYjgQ9j0oDSRg/Jlpe94Ld22d1fgmfLr4Xn7MhXoczcYXrciE6A3A1rmsw0J8xP6BOXcB0IzE+zLJdwTJ1ZgH28i8Y6obDGibh9fiUtHQgdCJYpWhQdCDQnlim3dsJpn4VfTMWFymm3dldMfbxd6HGbCfWWl73g/rPh92CWQm6fhV9MYJbjR8WFymm2OY/fASvh964hJelAO7LzOqGwxl+CZ8uWl73gfbyLxpaXveB9vF3oOqGwxl8aQIHSRg/JYUYjgR4a/MhPftWDOqGwxkydWYBfgmfLg1Y+30A7svNVUXPztjmP304I0oAeGvzIXxpAgR0IR8otR8xPNCfMT7Msl3CuISXpHhr8yB0IR8q2OY/ftjmP39JGD8keGvzIJS0dCDQnliktR5cpHQjMTzQnlikdCJYpNCfMTzQnzE8tR5cpNCeWKS1HzE/SRg/JiE6A3MhXocy2OY/fZsv/RwbeDWoG3g9PZstCbiu7Qm6apvVOmqYHaiu740eKY77IYUYjgdJGD8kPY9KAlpe94Ld22d2vhefsX4Jny8hXoczcYXrcDWuazIhOgNw0J8xP6BOXcLMsl3AdCMxPTJ1ZgH28i8aJuH1+OqGwxiUtHQgdCJYpNCeWKVoUHQi3dsJpn4VfTLd2V0zFhcppfbxd6HGbCfX+s+H3lpe94GCWQm6fhV9MxYXKaWCW40e2OY/fASvh90A7svOuISXp"),
"format": 34896613399,
"index_count": 276,
"index_data": PackedByteArray("AAABAAIAAwAEAAUAAwAGAAQABwAIAAkABwAKAAgACwAMAA0ACwAOAAwADwAQABEADwASABAAEwAUABUAEwAWABQAFwAYABkAGgAbABwAGgAdABsAHgAfACAAIQAiACMAJAAlACYAJAAnACUAKAApACoAKAArACkALAAtAC4ALAAvAC0AMAAxADIAMAAzADEANAA1ADYANAA3ADUAOAA5ADoAOAA7ADkAPAA9AD4APAA/AD0AQABBAEIAQABDAEEARABFAEYARABHAEUASABJAEoASABLAEkATABNAE4ATABPAE0AUABRAFIAUABTAFEAVABVAFYAVABXAFUAWABZAFoAWABbAFkAXABdAF4AXABfAF0AYABhAGIAYwBkAGUAYwBmAGQAZwBoAGkAZwBqAGgAawBsAG0AawBuAGwAbwBwAHEAbwByAHAAcwB0AHUAcwB2AHQAdwB4AHkAegB7AHwAegB9AHsAfgB/AIAAgQCCAIMAhACFAIYAhACHAIUAiACJAIoAiACLAIkAjACNAI4AjACPAI0AkACRAJIAkACTAJEAlACVAJYAlACXAJUAmACZAJoAmACbAJkAnACdAJ4AnACfAJ0AoAChAKIAoACjAKEApAClAKYApACnAKUAqACpAKoAqACrAKkArACtAK4ArACvAK0AsACxALIAsACzALEAtAC1ALYAtAC3ALUAuAC5ALoAuAC7ALkAvAC9AL4AvAC/AL0A"),
"material": SubResource("StandardMaterial3D_s3vdw"),
"name": "Material.002",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 192,
"vertex_data": PackedByteArray("tkpKpboNJuWbO6zNklYm5R4PzpewVibl/3+qpQAAgNubO6zNklZ527ZKSqW6DZXb/39o4pJWbNuMQaI1i+95/R4PzpdOqQj9akFEoFLy7fsAEAEzP6mm/gAQATO/Vt79tkpKpboNmv0eD86XsFaU/OdJdjR3DtH+mzuszZJWEPoHQ5z0wp8Q+ps7rM1sqRD6B0Oc9DxgEPr/f6oxyv1//2pBRKBS8jf//3+qpf//4v2MQaI1i+8J/gAQATM/qWrmjEGiNYvvauZ2O7IKQKlq5v9/aOJsqQj8akFEoFLyifybO6zNbKk7+v9/qqX//y3+mzuszWypW/lqQUSgUvJb+R4PzpdOqVv550l2NHcOUfIAEAEzv1ZR8nY7sgq+VlHy/38AAECpvPt2O7IKvla8+3Y7sgpAqbz7/38AAL5WvPt2O7IKQKla6wAQATO/VlrrABABMz+pWut2O7IKvlZa6x4PzpdOqYrp2BY90k6gyO2bO6zNbKla8QAA17E5oM3iHg/Ol7BWKeMAANexOaAp4x4PzpdOqSnjAADXse9lKeObO6zNbKkjwNgWPdLaZSPAmzuszZJWI8DYFj3STqAjwB4PzpewVun/ABABMz+p6f8AEAEzv1bp/x4PzpdOqen/mzuszZJW2fMAANex72Xc8x4PzpewVuDz2BY90tpl1PMAANexOaDJ7dgWPdLaZcnt2BY90k6gye0AANex72XJ7XY7sgpAqUv9/3+qMcr99/3/fwAAQKlX+oxBojWL72v+50l2NHcO7P//f6qlAADh/7ZKSqW6Ddr//3+MM7wA9P/nSXY0dw5s+v9/AAC+Vij7/3+MM7wAg/h2O7IKvlYK/QdDnPTCn9rAW2bs/zxg2sDjZv//wp/awAdDnPQ8YNrA/39o4pJW8PYHQ5z0PGDz9ps7rM2SVvf2W2bs/zxg6fb/f2jibKnoxltm7P88YOjG/39o4pJW6MbjZv//wp/oxps7rM1sqRn+42b//8Kfuv7/f2jibKmU/wdDnPTCn4f8SLVKpboNah7h8M6XsFZqHmPErM2SVmoe/3+qpQAANgljxKzNklYfCf9/aOKSVu8ISLVKpboNgAnivxA1FvAGXOHwzpdOqflb/u8BMz+pGlwLwOGgkfLSW/7vATO/VhUgSLVKpboNECAXtnY0dw4jIOHwzpewVvYfY8SszZJWkT/3vJz0wp+RP/e8nPQ8YJE/Y8SszWypkT//f6oxyv36eAvA4aCR8vZ44r8QNRbwz3j/f6ql///JeP7vATM/qedMiMSyCkCp50zivxA1FvDnTP9/aOJsqS1aC8DhoJHyO1r/f6ql//9fWmPErM1sqeVZY8SszWypCFPh8M6XTqkIUwvA4aCR8ghTF7Z2NHcOMCWIxLIKvlYwJf7vATO/VjAl/38AAECpxj+IxLIKvlbGP/9/AAC+VsY/iMSyCkCpxj+IxLIKQKndOv7vATO/Vt06iMSyCr5W3Tr+7wEzP6ndOuHwzpdOqURnJuk90k6gF2v//9exOaD1YGPErM1sqSZu4fDOl7BWHjb//9exOaAeNv//17HvZR424fDOl06pHjZjxKzNbKlkAybpPdLaZWQDJuk90k6gZANjxKzNklZkA+HwzpewVv8//u8BMz+p/z/h8M6XTqn/P/7vATO/Vv8/Y8SszZJW3Qr//9ex72XgCibpPdLaZdcK4fDOl7BW5Ar//9exOaD9OybpPdLaZf07///Xse9l/Tsm6T3STqD9O4jEsgpAqYJY/3+qMcr9jVjivxA1FvCRWP9/AABAqShYF7Z2NHcOYQj/f6qlAABhCP9/jDO8AGIISLVKpboNYQgXtnY0dw6vJv9/AAC+VswmiMSyCr5WBSf/f4wzvABPJve8nPTCn4oIo5ns/zxgigj3vJz0PGCKCBuZ///Cn4oI/39o4pJWIwL3vJz0PGAvAqOZ7P88YAQCY8SszZJWQAL/f2jibKm+F6OZ7P88YL8XG5n//8Kfvhf/f2jikla/F2PErM1sqXx2G5n//8Kfl3b3vJz0wp8Ndv9/aOJsqat20P6LptD+i6bQ/oumeP1qb7/9yG+Y/D5uUv6McNxXwYDvV/6AHViWgapXHoDY+fypJfl7qof2VKxi/DCoOPojPTj6Iz04+iM9OPojPdL+gfV6dfx+cnUof6L+ivVo15zwaNec8GjXnPDA2skLodqLCzHbpww52r8K6efjIenn4yHp5+MhGr2j5hq9o+YavaPmSMJs+0jCbPtIwmz7SMJs+zHKmusxyprrMcqa6zHKmut1+gkN3/mLDGP5JAxu+9kNCs7p4wrO6eMKzunjCs7p43byNnl28jZ5dvI2eXbyNnk/QIB/P0CAfz9AgH8/QIB/NPBYnUzwRZ1o8DCdBfB7ne7t+jbu7fo27u36Nu7t+jY41oH6ZNYi+nbVKvwseEpXcw1ffvEM7n6PDFp/0Q33fdSrjP/+rOv9MFI4/NGv9Pll8VudZfFbnWXxW51l8Vudh/mYiSP6Eon9+laIDPjeisDD1GHAw9RhwMPUYcDD1GGmfHKMjnxpjG58XYzjfIiMf1w5AX9cOQF/XDkBD6vsAe+qtgGsqkQBd6ubAlKCswolgzQNFoDrA/OEqxJhdFIIGnM4CR55+gR0bn8MIJUXCiCVFwoglRcKIJUXCrxt/AuHddITtF6+C/h3gR/WF+E+1hfhPtYX4T5J5L5ZhuQYW2PlD2Bu49RUurywL7q8sC+6vLAvrR7tUK0e7VCtHu1QQgh6b0IIem9CCHpvQgh6b5gbzUiYG81ImBvNSJgbzUh53jwORNvtEVrixAnj19IV3yFAPN8hQDzfIUA83yFAPFB8J75QfCe+UHwnvlB8J74DfysBA38rAQN/KwEDfysBcWGZD4lhgg9EYcUPpGFnD9GyXBnRslwZ0bJcGdGyWxlbDVdrYg4JbKMX2WylCCdoNX7mAdN+WQHDfUwCSn/vAKEAQHbvAjh1owioch4Fo5CSO9EIkjvRCJI70QiSO9EIvG3+BUJubgV3bFsH/W6lBKdobbSnaG20p2hstKdobbR61sBoO9r8ZmvOimzc31dk")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_7f20v")

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_bkg8t"]
points = PackedVector3Array(-0.39132553, -0.69355416, 0.262639, 0.31726947, 1.4313828, 0.18934688, -0.42261082, 0.69037455, -0.90273327, 0.9843061, -0.3294803, -0.37369674, -1.1448039, 0.80281824, 0.19289702, 0.53009164, -0.29809612, 0.79096085, -0.50073117, -0.30581984, -0.8797306, 1.1082115, 0.78852737, -0.26495883, -0.56102335, 0.65377086, 0.7845462, 0.4974992, 0.6932713, -0.8744222, 0.5662167, 0.65641207, 0.7920065, -0.991573, -0.33453897, 0.2612428, -0.3080381, 1.400085, -0.29695398, 1.1448005, 0.8028169, 0.19289628, -1.1265516, 0.72527015, -0.26839533, -0.5693344, -0.30276436, 0.76114136, 0.42550707, -0.3003752, -0.9085272, 0.6014234, -0.65276694, -0.37575102, -0.53022426, 1.3637184, 0.19005387, 0.5150303, 1.3344246, -0.29764953, 0.99161935, -0.3345712, 0.2612577, -0.9843496, -0.32951054, -0.3737107, -0.6014234, -0.65276694, -0.37575102, 0.6062824, -0.6609147, 0.26353276, -0.034719203, 0.721606, 0.8489429, -0.03523728, -0.3337303, 0.86246586, 0.105645284, 0.6901764, -0.97265834, -0.07107419, -0.30216512, -0.9819933, -0.930339, 1.027613, -0.26395378, 0.14119326, -0.7217186, -0.37521088, 0.9644077, 1.0522175, 0.19255385, -0.6062824, -0.6609147, 0.26353276)

[node name="Collectible" type="Area3D"]
collision_layer = 4
script = ExtResource("1_pgilc")

[node name="CollisionMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.9791499, 0, 0, 0, 0.9640593, 0, 0, 0, 0.9791499, 0, 0, 0)
layers = 4
mesh = SubResource("ArrayMesh_1pg6c")
skeleton = NodePath("")

[node name="CollisionShape" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_bkg8t")

[node name="CollectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_63bg3")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="CollectSound" to="." method="_on_sound_finish"]
